# spark-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: Dependencies.cmake
example/: CMakeLists.txt  entry_point.cpp
spark/: CMakeLists.txt
spark/include/spark/: spark.h
spark/include/spark/assets/: sprite.h  tilemap.h
spark/include/spark/core/: application.h  asset.h  asset_manager.h  base.h  components.h  ecs.h  platform.h  window.h
spark/include/spark/renderer/: mesh.h  opengl.h  renderer.h  shader.h  texture_2d.h  vertex_array_object.h
spark/include/spark/systems/: camera_system_2d.h  physics_system_2d.h  sprite_renderer_system.h  tilemap_renderer_system.h
spark/include/spark/utility/: logger.h  time.h
spark/resources/: overworld.tm
spark/src/assets/: sprite.cpp  tilemap.cpp
spark/src/core/: application.cpp  asset.cpp  asset_manager.cpp  ecs.cpp  window.cpp
spark/src/renderer/: mesh.cpp  opengl.cpp  renderer.cpp  shader.cpp  texture_2d.cpp  vertex_array_object.cpp
spark/src/systems/: camera_system_2d.cpp  physics_system_2d.cpp  sprite_renderer_system.cpp  tilemap_renderer_system.cpp
spark/src/utility/: logger.cpp  time.cpp
spark_editor/: CMakeLists.txt
spark_editor/include/spark_editor/: base.h  imconfig.h
spark_editor/include/spark_editor/core/: components.h  database.h  view.h
spark_editor/include/spark_editor/models/: project.h  sprite.h  tile_map.h
spark_editor/include/spark_editor/utility/: file_dialog.h  file_system.h  texture.h
spark_editor/include/spark_editor/views/: app_window.h  application.h  application_sidebar.h  menu_bar.h  project_explorer.h  project_selector.h  sprite_editor.h  utility_window.h
spark_editor/src/: base.cpp  main.cpp
spark_editor/src/core/: components.cpp  database.cpp  view.cpp
spark_editor/src/models/: project.cpp  sprite.cpp  tile_map.cpp
spark_editor/src/utility/: file_dialog.cpp  file_system.cpp  texture.cpp  theme.cpp
spark_editor/src/views/: app_window.cpp  application.cpp  application_sidebar.cpp  menu_bar.cpp  project_explorer.cpp  project_selector.cpp  sprite_editor.cpp  utility_window.cpp
